--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".SecondScreen"
+            android:name=".GoalsScreen"
             android:label="@string/title_activity_second_screen"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
